--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,5 +1,5 @@
 table { width: 100%}
-th { background-color: aquamarine; color: darkslateblue;}
+th { background-color: darkgreen; color: bisque;}
 th , td { padding: 1px}
 td  { text-align: right;}
 
