--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,20 +1,130 @@
-table { width: 100%}
-th { background-color: darkgreen; color: bisque;}
-th , td { padding: 1px}
-td  { text-align: right;}
+nav ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
 
-/* gerade Zeile */
-tr:nth-child(even) { background-color: lightgrey}
+nav li {
+    list-style: none;
+    margin: 0.5em;
+    padding: 0;
+    font-size: 1.5em;
+}
 
-/* ungerade Zeile */
-tr:nth-child(odd)  { background-color: azure}
+@media (min-width: 45em) {
+    nav ul,li {
+        flex-direction: row;
+    }
 
-/* unvisited link */
-a:link    { color: slategray;}
+    nav li,li {
+        flex: 1;
+        font-size: 1em;
+    }
+}
 
-/* visited link */
-a:visited { color: darkred;}
+nav a,label {
+    display: block;
+    padding: 0.4em;
+    text-decoration: none;
+    font-weight: bold;
+    text-align: center;
+    border: 1px solid darkblue;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px white inset;
+    color: aliceblue;
+    background-color: steelblue;
+    transition: all .25s ease-in;
+}
+
+nav li [aria-current]  {
+    color: darkred;
+}
 
 /* mouse over link */
-a:hover   { color: blue;}
+a:hover {
+    color: blue;
+}
 
+table {
+    width: 100%
+}
+
+li,input {
+    margin: auto;
+    display: block;
+    padding: 0.4em;
+    text-decoration: none;
+    font-weight: bold;
+    border: 1px solid darkblue;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px aqua inset;
+    transition: all .25s ease-in;
+}
+
+li {
+    text-align: center;
+}
+
+input {
+    text-align: right;
+}
+
+li,label {
+    list-style: none;
+    margin: 0.5em;
+    padding: 0.2em;
+    font-size: 1.1em;
+}
+
+li:nth-child(even) {
+    color: darkblue;
+    background-color: bisque;
+}
+
+li:nth-child(odd) {
+    color: brown;
+    background-color: azure;
+}
+
+th {
+    background-color: steelblue;
+    color: aliceblue;
+    text-align: center;
+    transition: all .25s ease-in;
+    margin: 0.5em;
+    padding: 0.2em;
+}
+
+td {
+    text-align: right;
+    transition: all .25s ease-in;
+    margin: 0.5em;
+    padding: 0.2em;
+}
+
+/* gerade Zeile */
+tr:nth-child(even) {
+    background-color: lightgrey
+}
+
+/* ungerade Zeile */
+tr:nth-child(odd) {
+    background-color: azure
+}
+
+.button {
+    color: aliceblue;
+    background-color: steelblue;
+    margin: 2em auto;
+    flex-direction: row;
+    display: block;
+    padding: 0.4em;
+    text-decoration: none;
+    font-weight: bold;
+    text-align: center;
+    border: 1px solid darkblue;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px brown;
+    transition: all .25s ease-in;
+}
